<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/my_account"
        android:title="@string/my_account"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_android_app"/>
    <item
        android:id="@+id/my_adds"
        android:title= "@string/my_adds"
        app:showAsAction="never"/>
    <item
        android:id="@+id/recent_seen"
        android:title="@string/recent_seen"
        app:showAsAction="never"/>
    <item
        android:id="@+id/recent_searches"
        android:title="@string/recent_searches"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/setting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/info"
        android:title="@string/info"
        app:showAsAction="never"/>

</menu>